chore: switch to public tags

--- a/.changelog/v4.1.0/dependencies/000-ftf.md
+++ b/.changelog/v4.1.0/dependencies/000-ftf.md
@@ -1,1 +1,1 @@
-- Bump FiatTokenFactory to [`TODO`](https://github.com/circlefin/noble-fiattokenfactory/commit/TODO).
+- Bump FiatTokenFactory to [`0a7385d`](https://github.com/circlefin/noble-fiattokenfactory/commit/0a7385d9a37744ced1e4d61eae10de2b117f482b).
